--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,27 @@
-section {
-    margin-bottom: 20px;
+.container {
+    display: flex;
+    justify-content: space-between;
+}
+.philosopher-group {
+    width: 48%; 
 }
 
-#graph-container {
-    width: 100%;
-    height: 500px; /* Adjust to fit your needs */
+h3 {
+    text-align: center;
+    margin-bottom: 10px;
 }
+form {
+    margin: 0 auto;
+    width: 80%;
+    padding: 20px;
+}
+#graph {
+    width: 100%;
+    margin-top: 20px;
+}
+
+footer {
+    padding: 20px;
+    position: absolute;
+    bottom: 0;
+  }
